--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>画板</title>
-</head>
-<body>
-    hi
-</body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div id="canvas"></div>
+    <script>
+      canvas.onclick = e => {
+        console.log(e);
+        console.log(e.clientX);
+        console.log(e.clientY);
+        let div = document.createElement("div");
+        div.style.position = "absolute";
+        div.style.left = e.clientX + "px";
+        div.style.top = e.clientY + "px";
+        div.style.width = "6px";
+        div.style.height = "6px";
+        canvas.appendChild(div);
+        div.style.marginLeft = "-3px";
+        div.style.marginTop = "-3px";
+        div.style.borderRadius = "50%";
+        div.style.backgroundColor = "black";
+      };
+    </script>
+  </body>
 </html>
