--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
       var isTouchDevice = "ontouchstart" in document.documentElement;
       if (isTouchDevice) {
-          canvas.ontouchstart = e => {
+        canvas.ontouchstart = e => {
           let x = e.touches[0].clientX;
           let y = e.touches[0].clientY;
           last = [x, y];
@@ -33,16 +33,15 @@
         canvas.ontouchmove = e => {
           let x = e.touches[0].clientX;
           let y = e.touches[0].clientY;
-          drawLine(last[0],last[1],x,y)
+          drawLine(last[0], last[1], x, y);
           last = [x, y];
-        }
-      }else{
-
-
-      canvas.onmousedown = e => {
-        painting = true;
-        last = [e.clientX, e.clientY];
-      };
+        };
+      } else {
+        canvas.onmousedown = e => {
+          painting = true;
+          last = [e.clientX, e.clientY];
+        };
+      }
 
       canvas.onmousemove = e => {
         if (painting === true) {
